Log events in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -35,9 +35,9 @@
         <br>
         <div class="row">
             <div class="col-md-12">
-                <div gridstack class="grid-stack grid1" options="options">
+                <div gridstack class="grid-stack grid1" options="options" on-change="onChange(event,items)" on-drag-start="onDragStart(event,ui)" on-drag-stop="onDragStop(event,ui)" on-resize-start="onResizeStart(event,ui)" on-resize-stop="onResizeStop(event,ui)">
                     <div gridstack-item ng-repeat="w in widgets" class="grid-stack-item" data-gs-x="{{w.x}}" data-gs-y="{{w.y}}"
-                         data-gs-width="{{w.width}}" data-gs-height="{{w.height}}" data-gs-auto-position="1">
+                         data-gs-width="{{w.width}}" data-gs-height="{{w.height}}" data-gs-auto-position="1" on-item-added="onItemAdded(item)">
                             <div class="grid-stack-item-content">
                                 <a class="btn btn-primary" ng-click="removeWidget(w)" href="#">remove</a>
                             </div>
@@ -58,7 +58,7 @@
 
     <script type="text/javascript">
         var app = angular.module('GridStack', ['gridstack-angular']).
-          controller('DemoCtrl', function($scope) {
+          controller('DemoCtrl', function($scope, $log) {
 
             $scope.widgets = [{ x:0, y:0, width:1, height:1 }, { x:0, y:0, width:3, height:1 }];
 
@@ -75,6 +75,30 @@
             $scope.removeWidget = function(w) {
                 var index = $scope.widgets.indexOf(w);
                 $scope.widgets.splice(index, 1);
+            };
+
+            $scope.onChange = function(event, items) {
+                $log.log("onChange event: "+event+" items:"+items);
+            };
+
+            $scope.onDragStart = function(event, ui) {
+                $log.log("onDragStart event: "+event+" ui:"+ui);
+            };
+
+            $scope.onDragStop = function(event, ui) {
+                $log.log("onDragStop event: "+event+" ui:"+ui);
+            };
+
+            $scope.onResizeStart = function(event, ui) {
+                $log.log("onResizeStart event: "+event+" ui:"+ui);
+            };
+
+            $scope.onResizeStop = function(event, ui) {
+                $log.log("onResizeStop event: "+event+" ui:"+ui);
+            };
+
+            $scope.onItemAdded = function(item) {
+                $log.log("onItemAdded item: "+item);
             };
 
         });
