--- a/demo/index.html
+++ b/demo/index.html
@@ -37,7 +37,7 @@
             <div class="col-md-12">
                 <div gridstack class="grid-stack grid1" options="options" on-change="onChange(event,items)" on-drag-start="onDragStart(event,ui)" on-drag-stop="onDragStop(event,ui)" on-resize-start="onResizeStart(event,ui)" on-resize-stop="onResizeStop(event,ui)">
                     <div gridstack-item ng-repeat="w in widgets" class="grid-stack-item" data-gs-x="{{w.x}}" data-gs-y="{{w.y}}"
-                         data-gs-width="{{w.width}}" data-gs-height="{{w.height}}" data-gs-auto-position="1" on-item-added="onItemAdded(item)">
+                         data-gs-width="{{w.width}}" data-gs-height="{{w.height}}" data-gs-auto-position="1" on-item-added="onItemAdded(item)" on-item-removed="onItemRemoved(item)">
                             <div class="grid-stack-item-content">
                                 <a class="btn btn-primary" ng-click="removeWidget(w)" href="#">remove</a>
                             </div>
@@ -99,6 +99,10 @@
 
             $scope.onItemAdded = function(item) {
                 $log.log("onItemAdded item: "+item);
+            };
+
+            $scope.onItemRemoved = function(item) {
+                $log.log("onItemRemoved item: "+item);
             };
 
         });
