Fixed deprecated attributes

--- a/demo/index.html
+++ b/demo/index.html
@@ -63,8 +63,8 @@
             $scope.widgets = [{ x:0, y:0, width:1, height:1 }, { x:0, y:0, width:3, height:1 }];
 
             $scope.options = {
-                cell_height: 200,
-                vertical_margin: 10
+                cellHeight: 200,
+                verticalMargin: 10
             };
 
             $scope.addWidget = function() {
